Closed Bug 1593884 Opened 5 years ago Closed 5 years ago

Assertion failure: newLeaf->IsElement() && newLeaf->AsElement()->State().HasState(aState), at dom/events/EventStateManager.cpp:5528

Categories

(Core :: DOM: Events, defect)

Unspecified
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla72
Tracking Status
firefox-esr68 --- wontfix
firefox70 --- wontfix
firefox71 --- wontfix
firefox72 --- fixed

People

(Reporter: bc, Assigned: emilio)

References

()

Details

(Keywords: assertion, reproducible)

Attachments

(1 file)

  1. https://digital.iberiabank.com/
    or https://go.univest.net/

Reproduced locally using iberiabank but not univest.

  1. Assertion Nightly Linux
Assertion failure: newLeaf->IsElement() && newLeaf->AsElement()->State().HasState(aState), at /builds/worker/workspace/build/src/dom/events/EventStateManager.cpp:5528
#01: mozilla::EventStateManager::ContentRemoved(mozilla::dom::Document*, nsIContent*) [dom/events/EventStateManager.cpp:5572]
#02: mozilla::PresShell::ContentRemoved(nsIContent*, nsIContent*) [layout/base/PresShell.cpp:4351]
#03: nsNodeUtils::ContentRemoved(nsINode*, nsIContent*, nsIContent*) [dom/base/nsNodeUtils.cpp:0]
#04: nsINode::RemoveChildNode(nsIContent*, bool) [dom/base/nsINode.cpp:1822]
#05: nsINode::RemoveChild(nsINode&, mozilla::ErrorResult&) [dom/base/nsINode.cpp:547]
#06: mozilla::dom::Node_Binding::removeChild(JSContext*, JS::Handle<JSObject*>, nsINode*, JSJitMethodCallArgs const&) [s3:gecko-generated-sources:778ce5eeb1fbe65242c018cb9f9f051052380157ff27bcb08c5e793c1467656f9305eff26ee472515c5619c3cb3390059f0336c40a7d63e2a02964d651c82e24/dom/bindings/NodeBinding.cpp::1090]
#07: bool mozilla::dom::binding_detail::GenericMethod<mozilla::dom::binding_detail::NormalThisPolicy, mozilla::dom::binding_detail::ThrowExceptions>(JSContext*, unsigned int, JS::Value*) [dom/bindings/BindingUtils.cpp:3220]
#08: CallJSNative(JSContext*, bool (*)(JSContext*, unsigned int, JS::Value*), js::CallReason, JS::CallArgs const&) [js/src/vm/Interpreter.cpp:456]
#09: js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct, js::CallReason) [js/src/vm/Interpreter.cpp:548]
#10: Interpret(JSContext*, js::RunState&) [js/src/vm/Interpreter.cpp:0]
#11: js::RunScript(JSContext*, js::RunState&) [js/src/vm/Interpreter.cpp:423]
#12: js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct, js::CallReason) [js/src/vm/Interpreter.cpp:589]
#13: <name omitted> [js/src/vm/Interpreter.cpp:634]
#14: js::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, JS::Handle<JS::Value>, JS::MutableHandle<JS::Value>) [js/src/vm/Interpreter.h:104]
#15: PromiseReactionJob(JSContext*, unsigned int, JS::Value*) [js/src/builtin/Promise.cpp:1698]
#16: CallJSNative(JSContext*, bool (*)(JSContext*, unsigned int, JS::Value*), js::CallReason, JS::CallArgs const&) [js/src/vm/Interpreter.cpp:456]
#17: js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct, js::CallReason) [js/src/vm/Interpreter.cpp:548]
#18: <name omitted> [js/src/vm/Interpreter.cpp:634]
#19: JS::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, JS::HandleValueArray const&, JS::MutableHandle<JS::Value>) [js/src/jsapi.cpp:2718]
#20: mozilla::dom::PromiseJobCallback::Call(JSContext*, JS::Handle<JS::Value>, mozilla::ErrorResult&) [s3:gecko-generated-sources:459bd68f053d4775f5b0b7c60fdedb096097672d24585038b4bb3482166c8e296d4679eb046b8f15653c228c4c1978ecacfffce20fced70b78964dafea2eee2d/dom/bindings/PromiseBinding.cpp::26]
#21: mozilla::dom::PromiseJobCallback::Call(mozilla::ErrorResult&, char const*, mozilla::dom::CallbackObject::ExceptionHandling, JS::Realm*) [s3:gecko-generated-sources:8ff597fee16137a41c5c768d4731e63150ba2f32aaccb2a1985be307f0fad868e61bb63f08de085a377133bcfcb41787e072b5d1f0cda75a29d00492f676fce1/dist/include/mozilla/dom/PromiseBinding.h::91]
#22: mozilla::PromiseJobRunnable::Run(mozilla::AutoSlowOperation&) [xpcom/base/CycleCollectedJSContext.cpp:209]
#23: mozilla::CycleCollectedJSContext::PerformMicroTaskCheckPoint(bool) [xpcom/base/CycleCollectedJSContext.cpp:630]
#24: mozilla::EventListenerManager::HandleEventSubType(mozilla::EventListenerManager::Listener*, mozilla::dom::Event*, mozilla::dom::EventTarget*) [dom/events/EventListenerManager.cpp:0]
#25: mozilla::EventListenerManager::HandleEventInternal(nsPresContext*, mozilla::WidgetEvent*, mozilla::dom::Event**, mozilla::dom::EventTarget*, nsEventStatus*, bool) [dom/events/EventListenerManager.cpp:1231]
#26: mozilla::EventTargetChainItem::HandleEvent(mozilla::EventChainPostVisitor&, mozilla::ELMCreationDetector&) [dom/events/EventDispatcher.cpp:352]
#27: mozilla::EventTargetChainItem::HandleEventTargetChain(nsTArray<mozilla::EventTargetChainItem>&, mozilla::EventChainPostVisitor&, mozilla::EventDispatchingCallback*, mozilla::ELMCreationDetector&) [dom/events/EventDispatcher.cpp:553]
#28: mozilla::EventDispatcher::Dispatch(nsISupports*, nsPresContext*, mozilla::WidgetEvent*, mozilla::dom::Event*, nsEventStatus*, mozilla::EventDispatchingCallback*, nsTArray<mozilla::dom::EventTarget*>*) [dom/events/EventDispatcher.cpp:1049]
#29: mozilla::EventDispatcher::DispatchDOMEvent(nsISupports*, mozilla::WidgetEvent*, mozilla::dom::Event*, nsPresContext*, nsEventStatus*) [dom/events/EventDispatcher.cpp:1153]
#30: mozilla::DOMEventTargetHelper::DispatchEvent(mozilla::dom::Event&, mozilla::dom::CallerType, mozilla::ErrorResult&) [dom/events/DOMEventTargetHelper.cpp:166]
#31: mozilla::dom::EventTarget::DispatchEvent(mozilla::dom::Event&) [dom/events/EventTarget.cpp:178]
#32: mozilla::dom::XMLHttpRequestMainThread::DispatchProgressEvent(mozilla::DOMEventTargetHelper*, mozilla::dom::XMLHttpRequestMainThread::ProgressEventType, long, long) [dom/xhr/XMLHttpRequestMainThread.cpp:1218]
#33: mozilla::dom::XMLHttpRequestMainThread::ChangeStateToDoneInternal() [dom/xhr/XMLHttpRequestMainThread.cpp:2322]
#34: mozilla::dom::XMLHttpRequestDoneNotifier::Run() [dom/xhr/XMLHttpRequestMainThread.h:817]
#35: nsGlobalWindowInner::DeprioritizedLoadRunner::Run() [dom/base/nsGlobalWindowInner.h:1440]
#36: nsThread::ProcessNextEvent(bool, bool*) [xpcom/threads/nsThread.cpp:1225]
#37: NS_ProcessNextEvent(nsIThread*, bool) [xpcom/threads/nsThreadUtils.cpp:486]
#38: mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate*) [ipc/glue/MessagePump.cpp:88]
#39: MessageLoop::Run() [ipc/chromium/src/base/message_loop.cc:291]
#40: nsBaseAppShell::Run() [widget/nsBaseAppShell.cpp:139]
#41: XRE_RunAppShell() [toolkit/xre/nsEmbedFunctions.cpp:934]
#42: mozilla::ipc::MessagePumpForChildProcess::Run(base::MessagePump::Delegate*) [ipc/glue/MessagePump.cpp:238]
#43: MessageLoop::Run() [ipc/chromium/src/base/message_loop.cc:291]
#44: XRE_InitChildProcess(int, char**, XREChildData const*) [toolkit/xre/nsEmbedFunctions.cpp:769]
#45: content_process_main(mozilla::Bootstrap*, int, char**) [ipc/contentproc/plugin-container.cpp:57]
#46: main [browser/app/nsBrowserApp.cpp:272]
#47: libc.so.6 + 0x271e3
#48: _start
Flags: needinfo?(emilio)
Assignee: nobody → emilio
Flags: needinfo?(emilio)

Same underlying reason as the comment before.

Also remove the XBL special case since XBL is no more.

Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/446bc0f67beb
Downgrade another assertion that can break with shadow dom. r=smaug
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla72

Hi Emilio, is qa needed here? If so, could you please provide us with some steps? Thanks!

Flags: needinfo?(emilio)

No, not needed, just a debug assertion failure. But thanks for checking!

Flags: needinfo?(emilio)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: