Bug 1593884 - Downgrade another assertion that can break with shadow dom. r=smaug

Same underlying reason as the comment before.

Also remove the XBL special case since XBL is no more.

Differential Revision: https://phabricator.services.mozilla.com/D52060